--- a/style.css
+++ b/style.css
@@ -254,3 +254,9 @@ small {
   font-size: 0.7rem;
   opacity: 0.7;
 }
+
+#diffInfo {
+  margin-top: 0.4rem;
+  font-size: 0.85rem;
+  opacity: 0.75;
+}
